# avida4

./: .gitignore  .gitmodules  CMakeLists.txt  Jamroot  TODO  build_avida
avida4-core/: CMakeLists.txt
avida4-core/source/: logic9_emscript.cpp
avida4-core/support/etc/: avida4.xcconfig  logic9.cfg
avida4.xcodeproj/: project.pbxproj
avida4.xcodeproj/project.xcworkspace/xcshareddata/: evocadx.xccheckout
avida4.xcworkspace/: contents.xcworkspacedata
avida4.xcworkspace/xcshareddata/: avida4.xccheckout
etc/: emscript.cfg
include/avida4/: logic9.h
math/R/: analysis.R
src/: logic9.cpp  logic9_emscript.cpp
src/logic9/: logic9.cpp
